# graphql_queries_from_schema

./: .gitignore  Cargo.toml  LICENSE  README.md
fixtures/: queries.graphql  schema.graphql
src/: lib.rs  main.rs
