[package]
name = "graphql_queries_from_schema"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo-parser = "0.5.0"
apollo-encoder = "0.4.0"
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "graphql_queries_from_schema"
path = "src/main.rs"
